# safepilot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  docker-compose.yml
.github/workflows/: audit.yml  ci.yml  docker.yml  lint.yml  release.yml
docs/: architecture.md  docker.md  hardening.md  security-model.md
docs/security/: README.md
src/: bot.rs  code.rs  config.rs  context.rs  crypto.rs  db.rs  jobs.rs  main.rs  orchestrator.rs  planning.rs  policy.rs  redact.rs  safe_error.rs  secrets.rs  security_prompt.rs  utils.rs
src/agent/: context.rs  executor.rs  mod.rs  state.rs
src/bot/: callbacks.rs  keyboards.rs  messages.rs  progress.rs  ui_text.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  provider.rs  types.rs
src/orchestrator/: audit.rs  integrations.rs  policy_domain.rs  workspace.rs
src/tools/: git.rs  github.rs  jira.rs  linear.rs  mod.rs  notion.rs  registry.rs  search.rs  shell.rs  slack.rs  telegram.rs  todoist.rs  weather.rs
src/tools/implementations/: browser.rs  checkpointed.rs  discord.rs  fetch.rs  github.rs  jira.rs  linear.rs  mod.rs  notion.rs  repo.rs  search.rs  slack.rs  telegram.rs  todoist.rs  weather.rs  x.rs
