[package]
name = "safepilot"
version = "0.2.0"
edition = "2021"
authors = ["3DCF Labs", "Yevhenii"]
description = "AI assistant that executes real work, safely"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
teloxide = { version = "0.12", features = ["macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
shell-words = "1.1"
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
urlencoding = "2"
base64 = "0.22"
three-dcf-core = "0.2"
tempfile = "3"
chromiumoxide = { version = "0.8.0", default-features = true }
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
regex = "1"
html2text = "0.5"

[features]
default = ["direct-api", "agent-loop"]
direct-api = []
agent-loop = ["direct-api"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
